--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
     <title>Управляющая компания</title>
   </head>
   <body>
-    <main class="container">
-      <div class="top-menu">
-        <h1>Управляющая компания "А+Б"</h1>
+    <div class="top-menu">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1 class="margin-top-30">Управляющая компания «РЭУ-22 района Измайлово»</h1>
+          </div>
+        </div>
       </div>
+    </div>
+    <div class="container">
       <div class="row">
         <div class="col left-menu">
           <ul class="list-unstyled left-menu-list">
@@ -34,18 +40,50 @@
           </ul>
           <div class="row">
             <div class="col-sm-12">
-              <input type="text" placeholder="Поиск по сайту">
+              <input class="input-search" type="text" placeholder="Поиск по сайту">
             </div>
           </div>
         </div>
-        <div class="col-9 content">
+        <div class="col-md-9 content">
           <h2>Общая информация</h2>
+          <div class="term-horizontal">
+            <div class="row">
+              <div class="col-md-3 term-title">Наименование</div>
+              <div class="col">Управляющая компания «РЭУ-22 района Измайлово»</div>
+            </div>
+            <div class="row">
+              <div class="col-md-3 term-title">Руководитель</div>
+              <div class="col">Черноков Сергей Семёнович</div>
+            </div>
+            <div class="row">
+              <div class="col-md-3 term-title">Адрес</div>
+              <div class="col">Москва, проезд. Заводской, д. 25</div>
+            </div>
+            <div class="row">
+              <div class="col-md-3 term-title">Телефон</div>
+              <div class="col">7 (499) 367-77-09</div>
+            </div>
+            <div class="row">
+              <div class="col-md-3 term-title">ИНН</div>
+              <div class="col">7719614299</div>
+            </div>
+            <div class="row">
+              <div class="col-md-3 term-title">ОГРН</div>
+              <div class="col">1067761033251</div>
+            </div>
+          </div>
+          <p class="margin-top-30">
+            <b>Режим работы</b><br>
+            с понедельник а по четверг с 8.00 до 17.00; пятница с 8.00 до 15.45. обеденный перерыв с 12.00 до 12.45 суббота, воскресенье - выходной Приём граждан:Генеральный директор Черноков Сергей Семенович вторник 15:00-18:00Первый заместитель генерального директораДолгунков Сергей Викторович среда 15:00-18:00Сотрудники управляющей организации: понедельник - пятница В рабочее время
+          </p>
           <p>
-            Общая информация об управляющей организации, товариществе и кооперативе, в том числе об основных показателях финансово-хозяйственной деятельности (включая сведения о годовой бухгалтерской отчетности, бухгалтерский баланс и приложения к нему, сведения о доходах, полученных за оказание услуг по управлению многоквартирными домами (по данным раздельного учета доходов и расходов), а также сведения о расходах, понесенных в связи с оказанием услуг по управлению многоквартирными домами (по данным раздельного учета доходов и расходов), сметы доходов и расходов товарищества или кооператива, отчет о выполнении смет доходов и расходов товарищества или кооператива).
+            <b>Режим работы диспетчерской службы</b><br>
+            Ежедневно, круглосуточно.
+          </p>
           </p>
         </div>
       </div>
-    </main>
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
