--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="height-100p" lang="ru">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,17 +14,16 @@
 
     <title>Управляющая компания</title>
   </head>
-  <body>
-    <div class="top-menu">
+  <body class="height-100p">
+    <div class="top-title">
       <div class="container">
         <div class="row">
-          <div class="col">
-            <h1 class="margin-top-30">Управляющая компания «РЭУ-22 района Измайлово»</h1>
-          </div>
+            <span class="title">Управляющая компания «РЭУ-22 района Измайлово»</span><br>
+            <small>Москва, проезд. Заводской, д. 25, тел. <a href="tel:+74993677709">7 (499) 367-77-09</a></small>
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container height-100p main-container">
       <div class="row">
         <div class="col left-menu">
           <ul class="list-unstyled left-menu-list">
